tinyc/test/bad/init-array-designator-nonconst.c
int main()
{
    int one = 1;
    int x[ 4 ] = { [ one + one ] = 5 };
    return 0;
}
